Fix display bug on iOS Safari. Fixes DIGREPO-416

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -11,7 +11,7 @@ $header_background_image: 'ADRL_BG_1280x160.png';
   .navbar-brand {
     background: transparent image_url($logo_image) no-repeat top left;
     background-size: 80%;
-    width: 363px;
+    width: 318px;
     height: 75px;
     margin-left: 2px;
   }
